# DL_Algorithms

./: .gitignore  CURRICULUM_GUIDE.md  Makefile  README.md  pyproject.toml  requirements.txt
backprop/: README.md  __init__.py  config.py  config.yaml  data.py  evaluate.py  model.py  train.py  visualize.py
backprop/tests/: __init__.py  test_data.py  test_evaluate.py  test_model.py  test_train.py  test_visualize.py
evaluate/: README.md  __init__.py  activation_analysis.py  calibration.py  config.py  config.yaml  dataset_explorer.py  evaluate.py  few_shot.py  perplexity.py  pipeline.py  report.py  weight_analysis.py
evaluate/tests/: __init__.py  test_calibration.py  test_dataset_explorer.py  test_error_handling.py  test_few_shot.py  test_narrative_report.py  test_perplexity.py  test_pipeline.py  test_report.py
finetune/: README.md  __init__.py  compare.py  config.py  config.yaml  data.py  evaluate.py  reward_model.py  rlaif.py  rlhf.py  sft.py
finetune/tests/: __init__.py  test_data.py  test_reward_model.py  test_rlhf.py
infer/: README.md  __init__.py  benchmark.py  config.py  config.yaml  data.py  evaluate.py  inference.py  kv_cache.py  reasoning.py
infer/tests/: __init__.py  (+3 more)
pretrain/: README.md  __init__.py  config.py  config.yaml  data.py  evaluate.py  generate.py  model.py  tokenizer.py  train.py  visualize.py
shared/: __init__.py  checkpointing.py  config.py  logging_utils.py  lr_schedule.py  seed.py
visiontx/: README.md  __init__.py  attention_viz.py  baseline.py  config.py  config.yaml  data.py  evaluate.py  model.py  train.py  visualize.py
(+21 files in other folders)
