[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "deep-learning-llm-mastery"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []   # see requirements.txt for pinned versions

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "backprop*", "pretrain*",
           "finetune*", "visiontx*",
           "infer*", "evaluate*"]
